<resources>
    <string name="app_name">RegisterApp</string>
    <string name="enter_names">Enter Names</string>
    <string name="enter_Email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="submit">SUBMIT</string>
</resources>
